--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.1.3",
         "vue": "^3.2.25",
+        "vue-agile": "^2.0.0",
+        "vue-axios": "^3.4.1",
         "vue-router": "^4.0.15"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.3.3",
-        "axios": "^0.25",
+        "axios": "^0.25.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
