--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "vue": "^3.2.25",
         "vue-agile": "^2.0.0",
         "vue-axios": "^3.4.1",
-        "vue-router": "^4.0.15"
+        "vue-router": "^4.0.15",
+        "vue-slick-carousel": "^1.0.6"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.3.3",
