--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "vue-agile": "^2.0.0",
         "vue-axios": "^3.4.1",
         "vue-router": "^4.0.15",
-        "vue-slick-carousel": "^1.0.6"
+        "vue-slick-carousel": "^1.0.6",
+        "vue3-carousel": "^0.1.40",
+        "vue3-form": "^1.1.0"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.3.3",
