--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,10 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
-LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=kvc1_mysql
+DB_HOST=kvcmysql
 DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
@@ -50,3 +49,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+L5_SWAGGER_GENERATE_ALWAYS=true
