--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.1.3",
+        "pinia": "^2.0.14",
         "vue": "^3.2.25",
         "vue-agile": "^2.0.0",
         "vue-axios": "^3.4.1",
