--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^2.3.3",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.25.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.2",
         "vite": "^2.9.9"
     }
 }
