--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.6.4",
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.1.3",
         "pinia": "^2.0.14",
