--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "vue-agile": "^2.0.0",
         "vue-axios": "^3.4.1",
         "vue-router": "^4.0.15",
-        "vue-slick-carousel": "^1.0.6",
         "vue3-carousel": "^0.1.40",
         "vue3-form": "^1.1.0"
     },
@@ -28,6 +27,7 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.2",
-        "vite": "^2.9.9"
+        "vite": "^2.9.9",
+        "vue-concise-slider": "^4.2.5"
     }
 }
