--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-build-classic": "^34.1.0",
+        "@ckeditor/ckeditor5-vue": "^4.0.1",
         "@headlessui/vue": "^1.6.4",
         "@popperjs/core": "^2.11.5",
         "bootstrap": "^5.1.3",
+        "filepond": "^4.30.4",
         "pinia": "^2.0.14",
+        "primevue": "^3.15.0",
         "vue": "^3.2.25",
         "vue-agile": "^2.0.0",
         "vue-axios": "^3.4.1",
+        "vue-filepond": "^7.0.3",
         "vue-router": "^4.0.15",
         "vue3-carousel": "^0.1.40",
         "vue3-form": "^1.1.0"
